--- a/wdd130/wwr/styles/site-plan-rafting.css
+++ b/wdd130/wwr/styles/site-plan-rafting.css
@@ -5,11 +5,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #219EBC   ;
+  --secondary-color: #023047 ;
+  --accent1-color: #FFB703;
   --accent2-color: white;
-s
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
   --paragraph-font: Lato, Helvetica, sans-serif;
